--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ header {
     justify-content: space-between;
     flex-wrap: nowrap;
     background-color: black;
+    margin-bottom: 1%;
 }
 
 .headerText {
