--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ header {
     background-color: black;
     margin-bottom: 1%;
     margin-top: 1%;
+    padding: 20%;
+    align-items: center;
 }
 
 .headerText {
