--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ header {
 .headerRight {
     display: flex;
     justify-content: space-between;
-    margin-left: auto;
+    margin-left: 1%;
 }
 
 .headerTextHier, headerText:hover {
