--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ header {
     color: violet;
 }
 
+.headerRightTextAbstand {
+    margin-left: 5%;
+}
+
 .logo {
     width: 100%;
     height: auto;
