--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ header {
     background-color: black;
     margin-bottom: 1%;
     margin-top: 1%;
-    padding: 2%;
+    padding: 10px;
     align-items: center;
 }
 
