--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header {
     margin-bottom: 1%;
     margin-top: 1%;
     align-items: center;
-    height: auto;
+    height: 80px;
 }
 
 .headerText {
