--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: rgb(0, 0, 0, 0.3);
+    background-image: url(img/background.png);
+}
 header {
     display: flex;
     justify-content: space-between;
