--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,15 @@ header {
     flex-wrap: nowrap;
 }
 
+fieldset {
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border: 1px solid black;
+}
+
 .logo {
     width: 100%;
     height: auto;
