--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,14 @@ header {
 }
 
 fieldset {
+    display: flex;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     border: 1px solid black;
+    flex-direction: column;
 }
 
 .logo {
