--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(0, 0, 0, 0.3);
     background-image: url(img/background.png);
+    align-items: center;
 }
 header {
     display: flex;
