--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
     display: flex;
     background-color: rgb(0, 0, 0, 0.3);
-    background-image: url(img/background.png);
+    background-image: url(https://images2.alphacoders.com/130/thumb-1920-1307306.png);
     align-items: center;
 }
 header {
