--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ fieldset {
     border: 1px solid gray;
     background-color: rgba(70, 69, 69, 0.836);
     flex-direction: column;
+    align-items: center;
 }
 
 .logo {
