--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,8 @@ header {
 #container {
     display: flex;
     flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
 }
 
 fieldset {
@@ -47,7 +49,6 @@ fieldset {
     border: 1px solid gray;
     background-color: rgba(70, 69, 69, 0.26);
     flex-direction: column;
-    justify-content: center;
 }
 
 .logo {
