--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ header {
 #container {
     display: flex;
     flex-wrap: nowrap;
-    align-items: center;
+    align-content: center;
     justify-content: center;
 }
 
