--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ fieldset {
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    border: 1px solid gray;
-    background-color: rgba(70, 69, 69, 0.26);
+    border: 1px solid rgb(180, 180, 180);
+    background-color: rgba(70, 69, 69, 0.527);
     flex-direction: column;
 }
 
