--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,12 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    background-color: black;
+    filter: brightness(0.2) blur(1);
     margin-bottom: 1%;
     margin-top: 1%;
     align-items: center;
     height: 60px;
+    -webkit-filter: brightness(0.2) blur(1);
 }
 
 .headerText {
