--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ fieldset {
     border: 1px solid rgb(180, 180, 180);
     background-color: rgba(70, 69, 69, 0.527);
     flex-direction: column;
+    color: black;
 }
 
 .logo {
