--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header {
 
 fieldset {
     display: flex;
-    border-radius: 10px;efwef
+    border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
