--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 fieldset {
