--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,17 @@
 body {
     background-color: rgb(0, 0, 0, 0.9);
     background-image: url(https://images2.alphacoders.com/130/thumb-1920-1307306.png);
+    background-repeat: no-repeat;
+    background-blend-mode: darken;
 }
 header {
     display: flex;
     justify-content: space-between;
     flex-wrap: nowrap;
-    filter: brightness(0.2) blur(1);
     margin-bottom: 1%;
     margin-top: 1%;
     align-items: center;
     height: 60px;
-    -webkit-filter: brightness(0.2) blur(1);
 }
 
 .headerText {
@@ -38,6 +38,14 @@ header {
     flex-wrap: nowrap;
     align-content: center;
     justify-content: space-between;
+}
+
+.middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
 fieldset {
