--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
     background-color: rgb(0, 0, 0, 0.9);
-    background-image: url(https://images2.alphacoders.com/130/thumb-1920-1307306.png);
+    background-image:url(https://images2.alphacoders.com/130/thumb-1920-1307306.png);
     background-repeat: no-repeat;
-    background-blend-mode: darken;
+    filter: brightness(0.8);
+    -webkit-filter: brightness(0.8);
 }
 header {
     display: flex;
