--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ header {
 #container {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .middle {
