--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ header {
 #container {
     display: flex;
     flex-wrap: nowrap;
+    align-content: center;
     justify-content: space-around;
 }
 
@@ -44,6 +45,7 @@ header {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     align-content: center;
 }
 
