--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ header {
     display: flex;
     flex-wrap: nowrap;
     align-content: center;
+    align-items: baseline;
     justify-content: space-around;
 }
 
