--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
 body {
     background-color: rgb(0, 0, 0, 0.9);
     background-image:url(https://images2.alphacoders.com/130/thumb-1920-1307306.png);
+    background-size: cover;
     background-repeat: no-repeat;
-    filter: brightness(0.8);
-    -webkit-filter: brightness(0.8);
+    filter: (50%);
+    -webkit-filter: (50%);
 }
 header {
     display: flex;
