--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,11 @@ h1 {
     justify-content: center;
     align-self: center;
 }
+.mainbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+}
