--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ h1 {
 }
 #mainbox {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     align-content: center;
     justify-content: center;
