--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,7 @@ h1 {
     display: flex;
     align-self: flex-start;
     margin-bottom: 20%;
+    margin-top: 10%;
     color: white;
     justify-content: center;
     align-self: center;
