--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
 }
 header {
     display: flex;
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
     justify-content: space-between;
     flex-wrap: nowrap;
     margin-bottom: 1%;
