--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header {
 
 #container {
     display: flex;
-    position: fixed;
+    position: relative;
     align-items: center;
     align-content: center;
     flex-wrap: nowrap;
@@ -87,6 +87,6 @@ h1 {
     flex-direction: row;
     align-items: center;
     align-content: center;
-    justify-content: space-evenly;
+    justify-content: center;
     justify-items: center;
 }
