--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,12 @@ h1 {
     justify-items: center;
 }
 
-.link, link:visited {
+.link {
+    text-decoration: underline;
+    color: rgb(180, 180, 180);
+}
+
+link:visited {
     text-decoration: underline;
     color: rgb(180, 180, 180);
 }
