--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    align-content: space-around;
 }
 header {
     display: flex;
