--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+    display: flex;
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('https://images2.alphacoders.com/130/thumb-1920-1307306.png');
     background-size: cover;
     background-repeat: no-repeat;
