--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ footer {
     bottom: 0px;
     height: max-content;
 }
-a {
+p {
     text-decoration: rgb(rgb(242, 222, 247)7);
     color: rgb(242, 222, 247);
     font-size: 110%;
