--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 body {
-    display: flex;
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('https://images2.alphacoders.com/130/thumb-1920-1307306.png');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    align-content: space-around;
 }
 header {
     display: flex;
@@ -94,9 +92,9 @@ h1 {
     align-self: center;
 }
 footer {
+    display: flex;
     background-color: black;
-    bottom: 0px;
-    height: max-content;
+    margin-top: 105%;
 }
 p {
     text-decoration: rgb(rgb(242, 222, 247)7);
