--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ footer {
     display: flex;
     background-color: black;
     margin-top: 60%;
+    height: 20%;
 }
 p {
     text-decoration: rgb(rgb(242, 222, 247)7);
