--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,11 @@ p {
 h3 {
     color: white;
 }
+footer {
+    display: flex;
+    background-color: black;
+    color: white;
+    margin-top: 70%;
+    height: 20%;
+    align-items: center;
+}
