--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ h3 {
 }
 footer {
     display: flex;
+    justify-content: center;
     background-color: black;
     color: white;
     margin-top: 70%;
