--- a/css/style.css
+++ b/css/style.css
@@ -119,3 +119,12 @@ footer {
     height: 20%;
     align-content: center;
 }
+#ka {
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    margin-top: 70%;
+    height: 20%;
+    align-content: center;
+}
