--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ footer {
     margin-top: 30%;
     height: 60px;
     justify-content: center;
+    align-content: center;
 }
 .impressum {
     display: flex;
