--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ footer {
     background-color: black;
     color: white;
     margin-top: 30%;
-    height: 60px;
+    height: max-content;
     justify-content: center;
     flex-direction: column;
 }
