--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ fieldset {
     border: 1px solid rgb(180, 180, 180);
     background-color: rgb(70, 69, 69);
     background-color: rgba(70, 69, 69, 0.527);
+    justify-content: center;
     flex-direction: column;
     color: black;
 }
